--- a/web/public/scss/custom/_footer.scss
+++ b/web/public/scss/custom/_footer.scss
@@ -27,14 +27,20 @@
     display: flex;
     flex-direction: column;
     line-height: 1.5rem;
+    text-align: center;
 
     @include breakpoint('m') {
       flex-direction: row;
+      text-align: left;
     }
   }
 
 
   &__ice {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
     a {
       display: block;
       height: calc(1.5rem + 2rem);
@@ -52,15 +58,23 @@
   &__links {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 1rem;
 
     @include breakpoint('m') {
       flex-direction: row;
+      margin-top: 0;
     }
 
     a {
+      padding: 0;
 
-      @include breakpoint('m') {
-        + a {
+      + a {
+        margin-top: 1rem;
+
+        @include breakpoint('m') {
+          margin-top: 0;
           margin-left: 1rem;
         }
       }
